Toast messages fixed a little bit. Now the body scroll is invisible

--- a/src/styles/_custom.scss
+++ b/src/styles/_custom.scss
@@ -1,1 +1,13 @@
 // Here you can add other styles
+/* Hide scrollbar for Chrome, Safari and Opera */
+body::-webkit-scrollbar {
+    display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+body {
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
+}
